Fix wrapover bug.

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .panel {
-    width: 700px;
+    width: 701px;
     padding: 0.5em 0;
     display: flex;
     justify-content: space-around;
@@ -39,10 +39,13 @@ body {
 }
 
 .grid {
-    width: 700px;
+    width: 701px;
     height: 700px;
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    align-content: flex-start;
 }
 
 .footer {
@@ -53,6 +56,7 @@ body {
 
 
 .box {
+    border: 0.5px solid white;
     box-sizing: border-box;
     /* height: calc(700px/8);
     width: calc(700px/8); */
